@@ -10,6 +10,7 @@ Patches and suggestions came from:
          Jay Foad
         Egan Ford
       Kacper Gutowski
+       Robin Haberkorn
         Paul Hardy
        David De La Harpe
    Daniel H. Leidisch
